--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,2 +1,8 @@
+---
+import Layout from "../../layouts/Layout.astro";
 
-<a href="/projects/pixelator">pixelator</a>
+
+---
+<Layout hasNavbar>
+    <a href="/projects/pixelator">pixelator</a>
+</Layout>
