add more react handling, soundboard and 3d css article start

--- a/src/components/Astro/Inputs/ThemeToggle.astro
+++ b/src/components/Astro/Inputs/ThemeToggle.astro
@@ -12,12 +12,12 @@
     />
     <div class="w-[40px] bg-gray-900 rounded-full h-full relative peer-focus:outline-none">
         
-        <div id="slider" class="aspect-square rounded-full w-[20px] bg-accent"/>
+        <div id="slider" class="aspect-square rounded-full w-[20px] bg-accent hidden"/>
     </div>
 </label>
 </div>
 <script>
-        import {gsap} from "gsap";
+    import {gsap} from "gsap";
 
     // color scheme
     let colorScheme = localStorage.getItem("color-scheme") || "light";
@@ -25,14 +25,16 @@
     const themePicker = document.getElementById("theme-picker") as HTMLInputElement;
     const slider = document.getElementById("slider");
     if (themePicker && slider) {
-
-         if (colorScheme === "dark") {
-                slider.style.transform = "translateX(20px)";
-                themePicker.setAttribute("checked", "true");
-            } else {
-                slider.style.transform = "translateX(0)";
-                themePicker.removeAttribute("checked");
-            }
+        setTimeout(() => {slider.classList.remove("hidden")}, 1)
+        if (colorScheme === "dark") {
+            slider.style.transform = "translateX(20px)";
+            themePicker.setAttribute("checked", "true");
+        } else {
+            slider.style.transform = "translateX(0)";
+            themePicker.removeAttribute("checked");
+        }
+        
+        
 
         themePicker.addEventListener("click", () => {
             const currentScheme = colorScheme;
@@ -42,7 +44,6 @@
             document.documentElement.classList.add(newScheme);
             localStorage.setItem("color-scheme", newScheme)
             colorScheme = newScheme;
-            console.log("Color scheme changed to:", newScheme);
             themePicker.setAttribute("checked", newScheme === "dark" ? "true" : "false");
 
             if (newScheme === "dark") {
