--- a/src/components/Astro/canvases/GardenBackdrop.astro
+++ b/src/components/Astro/canvases/GardenBackdrop.astro
@@ -6,12 +6,12 @@ import MainBackgroundFull from "../../assets/mainBackgroundFull.jpeg";
 <script>
 import {Plant} from "../canvases/classes/Plant.ts"
 import {ImageLayer} from "../canvases/classes/ImageLayer.ts"
-import MainBackgroundFull from "../../assets/mainBackgroundFull.jpeg";
+import MainBackgroundFull from "../../../assets/mainBackgroundFull.jpeg";
 
-import foreground from "../../assets/mainlayers/foreground v1.png";
-import tree from "../../assets/mainlayers/midground checkpoint v2.png"
-import castle from "../../assets/mainlayers/castlle v1.png";
-import background from "../../assets/mainlayers/foregrounderase.png";
+import foreground from "../../../assets/mainlayers/foreground v1.png";
+import tree from "../../../assets/mainlayers/midground checkpoint v2.png"
+import castle from "../../../assets/mainlayers/castlle v1.png";
+import background from "../../../assets/mainlayers/foregrounderase.png";
 
 
     const canvas = document.getElementById("garden-canvas") as HTMLCanvasElement
