--- a/src/components/Astro/NavBar.astro
+++ b/src/components/Astro/NavBar.astro
@@ -7,7 +7,7 @@ const {contentContainerId = ""} = Astro.props;
 
 <nav
     id="navBar" 
-    class="fixed top-0 left-0 right-0 z-50 h-[48px] w-full bg-accent transition-transform duration-300 ease-in-out"
+    class="fixed top-0 left-0 right-0 z-50 h-[48px] w-full bg-background transition-transform duration-300 ease-in-out"
 >
     <div class="mx-auto h-full flex items-center justify-between px-4">
         <a href="/" class="text-foreground font-bold text-lg">Garden ICON TBD</a>
@@ -49,10 +49,6 @@ const {contentContainerId = ""} = Astro.props;
     const mobileNavMenu = document.getElementById("mobile-nav-menu");
 
     if (navbarElement && menuToggle && mobileNavContainer && mobileNavMenu) {
-        let currentScroll = 0;
-        window.addEventListener('scroll', (e) => {
-            console.log(e)
-        });
         //initialize menu to be on the left
         gsap.to(mobileNavMenu, {
             duration: 0.01,
