--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -5,4 +5,5 @@ import Layout from "../../layouts/Layout.astro";
 ---
 <Layout hasNavbar>
     <a href="/projects/pixelator">pixelator</a>
+    <a href="/projects/soundboard">soundboard</a>
 </Layout>
