--- a/src/pages/projects/pixelator.astro
+++ b/src/pages/projects/pixelator.astro
@@ -1,7 +1,7 @@
 ---
 
 import Layout from "../../layouts/Layout.astro";
-import { Pixelator as PixelatorComponent } from "../../projects/SolidJS/pixelator";
+import { Pixelator as PixelatorComponent } from "../../projects/Solid/pixelator/index.solid";
 ---
 
 <Layout hasNavbar>
