--- a/src/components/Astro/canvases/GardenBackdrop.astro
+++ b/src/components/Astro/canvases/GardenBackdrop.astro
@@ -139,7 +139,7 @@ import background from "../../../assets/mainlayers/foregrounderase.png";
             }
 
             ctx.clearRect(0, 0, canvas.width, canvas.height)
-            ctx.fillStyle = "black";
+            ctx.fillStyle = "tr";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             
 
