--- a/src/components/Astro/Buttons/BasicButton.astro
+++ b/src/components/Astro/Buttons/BasicButton.astro
@@ -1,13 +1,14 @@
 ---
 // Props
 const {
-    id
+    id,
+    className
 } = Astro.props;
 
 ---
 
 <button
-    class={`px-4 py-2 rounded-md font-bold text-white transition-colors bg-muted hover:bg-accent hover:cursor-pointer`}
+    class={`px-4 py-2 rounded-md font-bold text-white transition-colors bg-muted hover:bg-accent hover:cursor-pointer ${className}`}
     id={id}
 >
     <slot />
