--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const {hasNavbar} = Astro.props
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Iceberg&family=Michroma&family=Uncial+Antiqua&display=swap" rel="stylesheet">
